Subiendo get more info de empleado

--- a/src/app/franquiciados/list-empleados/list-empleados.component.html
+++ b/src/app/franquiciados/list-empleados/list-empleados.component.html
@@ -17,4 +17,7 @@
 <h4>
   Cursos pendientes: {{empleados.pendientes}}
 </h4>
+<button mat-raised-button color="primary" (click)="sendEmpleado(empleados.id)">
+Get More Info
+</button>
 </mat-card>
