Subiendo modificacion para tener un header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,19 @@
 <mat-toolbar
 color = "primary">
-OsitoDormilon Gestion Franquiciados
+<span>
+  <a color="white" routerLink='/' routerLinkActive="active">
+      <mat-icon aria-label="homeButton">home</mat-icon>
+  </a>
+</span>
+<span>
+  <a color="white" routerLink='/franquicias' routerLinkActive="active">
+      <mat-icon aria-label="franquiciadosButton">assessment</mat-icon>
+  </a>
+</span>
+<span>
+  <a color="white" routerLink='/encuesta' routerLinkActive="active">
+      <mat-icon aria-label="encuestaButton">assignment</mat-icon>
+  </a>
+</span>
+
 </mat-toolbar>
