Subiendo una ayuda para encuestas

--- a/src/app/encuestas/encuesta-cliente/encuesta-cliente.component.html
+++ b/src/app/encuestas/encuesta-cliente/encuesta-cliente.component.html
@@ -1,17 +1,25 @@
-<form class="text-center" novalidate>
+<form class="text-center" #postForm= "ngForm" (submit)="onSubmit(postForm)">
   <h6>Teniendo en cuenta que 5 es muy satisfecho y 1 es para nada satisfecho:</h6><br>
   <div *ngFor="let pregunta of preguntas">
     <h6>{{pregunta.contenido}}</h6>
     <div class="d-flex justify-content-center">
       <ul class="list-group list-group-horizontal">
-        <li class="list-group-item" *ngFor="let calificacion of pregunta.calificacion">
+        <!-- <li class="list-group-item" *ngFor="let calificacion of pregunta.calificacion">
           {{calificacion}}<br>
           <input type="radio" id="radio{{pregunta.id}}.{{calificacion}}" name="myChoice{{pregunta.id}}">
-        </li>
+        </li> -->
       </ul>
     </div>
     <br>
   </div>
+  <li class="list-group-item">
+    <input type="radio" ng-model="string"
+    value="ratio1"
+    name="string"
+    #string = "ngModel"
+    ngModel
+    >
+  </li>
   <div class="form-group text-left">
     <h6>Observaciones:</h6>
     <textarea class="form-control" rows="2" id="Observaciones"></textarea>
