--- a/src/app/encuestas/encuesta-cliente/encuesta-cliente.component.html
+++ b/src/app/encuestas/encuesta-cliente/encuesta-cliente.component.html
@@ -1,28 +1,29 @@
 <form class="text-center" #postForm= "ngForm" (submit)="onSubmit(postForm)">
+  <div class="form-group text-left">
+    <h6>Por favor ingrese su nombre:</h6>
+    <textarea class="form-control" rows="1" id="nombre" name="nombre" ngModel></textarea>
+  </div>
   <h6>Teniendo en cuenta que 5 es muy satisfecho y 1 es para nada satisfecho:</h6><br>
-  <div *ngFor="let pregunta of preguntas">
+  <div *ngFor="let pregunta of preguntas; let in=index">
     <h6>{{pregunta.contenido}}</h6>
     <div class="d-flex justify-content-center">
       <ul class="list-group list-group-horizontal">
-        <!-- <li class="list-group-item" *ngFor="let calificacion of pregunta.calificacion">
+        <li class="list-group-item" *ngFor="let calificacion of pregunta.calificacion">
           {{calificacion}}<br>
-          <input type="radio" id="radio{{pregunta.id}}.{{calificacion}}" name="myChoice{{pregunta.id}}">
-        </li> -->
+          <input type="radio"
+          value="{{calificacion}}"
+          id="radio{{pregunta.id}}.{{calificacion}}" 
+          name="myChoice{{pregunta.id}}"
+          ngModel
+          >
+        </li> 
       </ul>
     </div>
     <br>
   </div>
-  <li class="list-group-item">
-    <input type="radio" ng-model="string"
-    value="ratio1"
-    name="string"
-    #string = "ngModel"
-    ngModel
-    >
-  </li>
   <div class="form-group text-left">
     <h6>Observaciones:</h6>
-    <textarea class="form-control" rows="2" id="Observaciones"></textarea>
+    <textarea class="form-control" rows="2" id="obse" name="obse" ngModel></textarea>
   </div>
   <button class="btn-primary" type="submit">¡Enviar!</button>
 </form>
