--- a/src/app/encuestas/encuesta-cliente/encuesta-cliente.component.html
+++ b/src/app/encuestas/encuesta-cliente/encuesta-cliente.component.html
@@ -3,8 +3,14 @@
     <h6>Por favor ingrese su nombre:</h6>
     <textarea class="form-control" rows="1" id="nombre" name="nombre" ngModel></textarea>
   </div>
+  <div class="form-group text-left">
+    <h6>Por favor seleccione su zona:</h6>
+    <select class="form-control form-control-lg" name="zona" id="zona" ngModel>
+      <option *ngFor="let zona of zonas" value="{{zona}}">{{zona}}</option>
+    </select>
+  </div>
   <h6>Teniendo en cuenta que 5 es muy satisfecho y 1 es para nada satisfecho:</h6><br>
-  <div *ngFor="let pregunta of preguntas; let in=index">
+  <div *ngFor="let pregunta of preguntas">
     <h6>{{pregunta.contenido}}</h6>
     <div class="d-flex justify-content-center">
       <ul class="list-group list-group-horizontal">
