--- a/src/app/encuestas/encuesta-cliente/encuesta-cliente.component.html
+++ b/src/app/encuestas/encuesta-cliente/encuesta-cliente.component.html
@@ -31,5 +31,5 @@
     <h6>Observaciones:</h6>
     <textarea class="form-control" rows="2" id="obse" name="obse" ngModel></textarea>
   </div>
-  <button class="btn-primary" type="submit">¡Enviar!</button>
+  <button onclick="location.href = '/recompensa'" class="btn-primary" type="submit">¡Enviar!</button>
 </form>
