--- a/src/app/encuestas/auditoria/auditoria.component.html
+++ b/src/app/encuestas/auditoria/auditoria.component.html
@@ -18,5 +18,5 @@
     <h6>Observaciones:</h6>
     <textarea class="form-control" rows="2" id="obse" name="obse" ngModel></textarea>
   </div>
-  <button class="btn-primary" type="submit">¡Enviar!</button>
+  <button class="btn-primary" type="submit" onclick="location.href = '/'">¡Enviar!</button>
 </form>
