--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,30 +1,34 @@
 <mat-toolbar
-color = "primary">
+  color = "accent">
+<a routerLink='/' routerLinkActive="active">
+  <img src="https://locatelcolombia.vteximg.com.br/arquivos/logo.png" style="width:140px;height:62px;border:0;">
+</a>
+  
 <span *ngIf="userIsAuthenticated">
-  <a color="white" routerLink='/' routerLinkActive="active">
-      <mat-icon aria-label="homeButton">home</mat-icon>
+  <a style="color:#145A32" routerLink='/franquicias' routerLinkActive="active">
+      <mat-icon aria-label="franquiciadosButton">assessment</mat-icon> Franquicias
   </a>
 </span>
 <span *ngIf="userIsAuthenticated">
-  <a color="white" routerLink='/franquicias' routerLinkActive="active">
-      <mat-icon aria-label="franquiciadosButton">assessment</mat-icon>
-  </a>
-</span>
-<span *ngIf="userIsAuthenticated">
-  <a color="white" routerLink='/encuesta' routerLinkActive="active">
-      <mat-icon aria-label="encuestaButton">assignment</mat-icon>
+  <a style="color:#145A32" routerLink='/encuesta' routerLinkActive="active">
+      <mat-icon aria-label="encuestaButton">assignment</mat-icon> Encuesta
   </a>
 </span>
 
 <div *ngIf="!userIsAuthenticated">
-  <a mat-button routerLink="/login" routerLinkActive="mat-accent">Acceder</a>
+  <a style="color:#145a32" mat-button routerLink="/login" routerLinkActive="mat-accent"><h5>Acceder</h5></a>
 </div>
 
-<!-- <div *ngIf="!userIsAuthenticated">
-  <a mat-button routerLink="/auth/signup" routerLinkActive="mat-accent">Registrarse</a>
-</div> -->
+<span *ngIf="userIsAuthenticated">
+  <a style="color:#145A32" routerLink='/auditoria' routerLinkActive="active">
+      <mat-icon aria-label="auditoriaButton">supervisor_account</mat-icon> Auditoria
+  </a>
+</span>
 
-<div *ngIf="userIsAuthenticated">
-  <a mat-button (click)="onLogout()">Salir</a>
-</div>
+<span *ngIf="userIsAuthenticated">
+  <a style="color:#145A32" mat-button (click)="onLogout()">
+      <mat-icon aria-label="logoutButton">exit_to_app</mat-icon> Cerrar Sesión
+  </a>
+</span>
+
 </mat-toolbar>
