--- a/src/app/encuestas/recompesa/recompesa.component.html
+++ b/src/app/encuestas/recompesa/recompesa.component.html
@@ -5,3 +5,10 @@
   <button class="btn-primary" onclick="location.href = '/encuesta'">Volver</button>
 </mat-card>
 </div>
+<h2>
+  {{infoEncuesta.codigo}}
+
+</h2>
+<h2>
+  {{infoEncuesta.recompensa}}
+</h2>
