--- a/src/app/franquiciados/list-empleados/list-empleados.component.html
+++ b/src/app/franquiciados/list-empleados/list-empleados.component.html
@@ -48,3 +48,8 @@ More Info
  {{obs}}
 </h6>
 </mat-card>
+<h5> Auditorías </h5>
+<mat-card *ngFor="let fecha of fechasAuditorias">
+<h6>{{fecha}}</h6>
+<h6>{{fechasAuditorias}}</h6>
+</mat-card>
